# wasp

./: .claudeignore  .dockerignore  .gdbinit  .gitignore  .gitmodules  .lldbinit  .𓈖.swp  Angle.cpp  Angle.h  Backtrace.cpp  Backtrace.h  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  Code.cpp  Code.h  Dockerfile  ErrorHandler.cpp  ErrorHandler.h  Fetch.cpp  Makefile  Map.cpp  Map.h  Node.cpp  Node.h  NodeTypes.h  README-Docker.md  README.md  SPECIFICATION.md  String.cpp  String.h  String.natvis  WasmHelpers.c  WasmHelpers.cpp  WasmHelpers.h  Wasp.cpp  Wasp.h  Wast.cpp  Wast.h  _  (+87 more)
.claude/: session-config.json  sessions.json  settings.json  settings.local.json
.claude/commands/: shell.md
.claude/hooks/: stop.sh
.github/: copilot.yml
.github/workflows/: build.yml  build.yml.disabled  claude.yml  qodana_code_quality.yml  test.yml
Frameworks/: binaryen-c.h  binaryen-me.h  binaryen_wasm.js  sourceMappingURL.txt
Frameworks/wabt_merge/: apply-names.cc  apply-names.h  binary-reader-ir.cc  binary-reader-ir.h  binary-reader-linker.cc  binary-reader-linker.h  binary-reader-logging.cc  binary-reader-logging.h  binary-reader-nop.h  binary-reader-objdump.cc  binary-reader-objdump.h  binary-reader-opcnt.cc  binary-reader-opcnt.h  binary-reader.cc  binary-reader.h  binary-writer-spec.cc  binary-writer-spec.h  binary-writer.cc  binary-writer.h  binary.cc  binary.h  binding-hash.cc  binding-hash.h  c-writer.cc  c-writer.h  cast.h  circular-array.h  color.cc  color.h  common.cc  common.h  config.cc  decompiler-ast.h  decompiler-ls.h  decompiler-naming.h  decompiler.cc  decompiler.h  emscripten-exported.json  emscripten-helpers.cc  error-formatter.cc  (+76 more)
Platform/: wasm.cmake
build2/: .ninja_deps  .ninja_log  build.ninja
core/: render.js  sin.c  sin.wasp.bak  wavefront.wasp
docs/: .htaccess  CNAME  FFI_COMPREHENSIVE_TESTS.md  FFI_DYNAMIC_WRAPPERS.md  FFI_EXTENDED_TESTS.md  FFI_POINTER_TYPES.md  codemirror-wasp-mode.js  codemirror-wast-mode.js  demangle.js  demo.js  editor.html  examples.js  faq.md  ffi-dynamic-system.md  ffi-strlen-bug-guide.md  ffi_signature_examples.cpp  ffi_test_design.md  index.html  index.md  index2.html  index3.html  mark-model.md  mark-syntax.md  test_demangle.js  upload_to_pannous.sh  wasp.js  wasp.wasm  wasp_tests.js  wiki_to_docs.sh
docs/assets/: ln_does_not_persist_need_to_cp.sh  wasp-debug.wasm  wasp-hosted.wasm  wasp-runtime.wasm  wasp.wasm
docs/assets.ok/: ln_does_not_persist_need_to_cp.sh
docs/editor/: editor.html
docs/monaco/: editor.html
dwarf/: index.html
js/: mark.js  package.json
js/lib/: mark.selector.js
js/test/: mark-dom.js  mark-model.js  mark-query.js  parse-error-handling.js  parse-html-jsdom.js  parse-html.js  parse-json.js  parse-json5.js  parse-mark.js  parse-xml-jsdom.js  parse-xml.js  stringify-mark.js
lib/: .wasp_history  3d_model_loader.wasm  FindReadline.cmake  aliases.wasp  carrot🥕🦜.wasp  cos.c  easyw.wasm  easyw.wast  hyperreals.wasp  lib.dom.d.ts  lib.es5.d.ts  libwasmedge.so.0  log.wasm  log.wast  lowerCase.c  lowerCase.wasm  lowerCaseUTF.c  math.wasp  mod.wasm  modf.wasm  package.json  pow.c  pow.cpp  pow.wast  pow_long.c  pow_long.wast  powi.c  powi.wasm  powi.wast  sin.c  sin.wasm  sin.wasp  sin.wat  units.wasp  wasm_exec.js  webgpu.h
page/: index.html
platform/: wasm.cmake
playground/: binary-writer-spec.cc  binary-writer-spec.h  build-wasi.sh  build-wasm-via-llc.sh  build-wasm-via-lld.sh  build-wasm.sh  build-wasp.sh  index.html  mark.kt  t.decompile  t.dwarfdump  t.llvm.objdump  t.map  t.objdump  test.wast copy  test_compile_wasm_to_c_to_native.sh  utf.txt  utf_ok_in_wasm_but_not_in_wat.txt
playground/test-lld-wasm/: README.md  compile-shared.sh  compile.sh  lib.c  lib.rs  main.c
probes/: REPRODUCE_STRING_BUG.md  TEST_RAYLIB_SIMPLE_USE.md  test_if_variable.wasp  test_raylib_simple_use.wasp
samples/: circle.wasp  comments.mark  errors.mark  errors.wasp  fourty_two.wasp  hello.wasp  html.wasp  import.wasp  interface_types.wit  kitchensink.mark  kitchensink.wasp  lib.wasp  main.wasp  math.angle  math.mark  math.wasp  netbase.wasp  polymorphism.wasp  raylib_circle.wasp  raylib_circle_forever.wasp  raylib_debug.wasp  raylib_demo.wasp  raylib_mouse_circle.wasp  raylib_simple.wasp  raylib_simple_use.wasp  raylib_sleep.wasp  sample.wasp  script.html  sdl_red_square.wasp  sin.wasp  sine.wasp  test.wasm  test.wasp  test_ffi.wasp  test_ffi_comprehensive.wasp  test_ffi_extended.wasp  tests  wasp.wasp  webgl.html  webgl.js  (+1 more)
samples/wai_example/: Cargo.toml  calculator.wai  consume.mjs  consume.py  index.wit  test.sh  wapm_pwd
samples/wai_example/src/: lib.rs
source/: .prompt  ABI.h  Angle.cpp  Angle.h  AngleKeywords.cpp  AngleKeywords.h  Backtrace.cpp  Backtrace.h  CharUtils.cpp  CharUtils.h  Code.cpp  Code.h  Config.h  Context.cpp  Context.h  DwarfEmitter.cpp  ErrorHandler.cpp  ErrorHandler.h  Fetch.cpp  FunctionAnalyzer.cpp  FunctionAnalyzer.h  Interpret.cpp  Interpret.h  Keywords.cpp  Keywords.h  List.cpp  List.h  LiteralParser.cpp  LiteralParser.h  Map.cpp  Map.h  Node.cpp  Node.h  NodeTypes.cpp  NodeTypes.h  OperatorAnalyzer.cpp  OperatorAnalyzer.h  Paint.cpp  Paint.h  Runtime.cpp  (+100 more)
test/: current.wasp  debug_merged.html  log.wasp  test.html  test_angle.cpp  test_arithmetic.cpp  test_dynlib_import.h  test_ffi.h  test_ffi_comprehensive.h  test_ffi_extended.h  test_ffi_header_parser.h  test_ffi_import_pattern.h  test_functions.h  test_include.js  test_math.h  test_strings.cpp  test_struct_types.h  test_type.h  test_wasm.cpp  test_wast.cpp  test_wit.h  tests.cpp  tests.h
test/merge/: lib.c  (+6 more)
tests/: feature_tests.h  implementation_tests.h  string_tests.h  test_angle.cpp  test_angle.h  test_arithmetic.cpp  test_browser.cpp  test_dynlib_import.h  test_list.h  test_map.h  test_node.h  test_strings.cpp  test_struct_types.h  test_wasm.cpp  tests.cpp  tests.h  web_tests.h
wasm-build/: Makefile
wasp-editor/: index.html
waspy/: README_MCP_PROXY.md  requirements.txt  sine.was  waspy-server.py  waspy.py  waspy_proxy.py  waspy_server.py  waspy_server_mcp.py
wax/: index.html  wasp.html  wasp.js  wasp_tests.js
(+123 files in other folders)
